# idotmatrix-api-client

./: README.md  example.py  example_digital_picture_frame.py  example_effect.py  example_markus.py  example_rainbow_light.py  pyproject.toml  test.py  test_effect.py  test_markus.py
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml
idotmatrix/: __init__.py  client.py  connectionManager.py  connection_manager.py  const.py  digital_picture_frame.py  screensize.py
idotmatrix/modules/: __init__.py  chronograph.py  chronographmodule.py  clock.py  clockmodule.py  common.py  commonmodule.py  countdown.py  countdownmodule.py  eco.py  ecomodule.py  effect.py  effectmodule.py  fullscreenColorModule.py  fullscreen_color.py  gif.py  gifmodule.py  graffiti.py  graffitimodule.py  image.py  musicSyncModule.py  music_sync.py  scoreboard.py  scoreboardmodule.py  system.py  systemmodule.py  text.py  textmodule.py
idotmatrix/util/: color_utils.py  file_watch.py  image_utils.py
tests/: __init__.py  chronograph_module_test.py  clock_module_test.py  common_module_test.py  countdown_module_test.py  eco_module_test.py  effect_module_test.py  fullscreencolor_module_test.py  gif_module_test.py  grafitti_module_test.py  image_module_test.py  pytest.ini  scoreboard_module_test.py  text_module_test.py
