[project]
name = "idotmatrix"
description = "A library for controlling iDotMatrix displays."
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.14"
version = "0.1.0"
classifiers = [
    "Intended Audience :: Developers",
]

dependencies = [
    "asyncio>=3.4.3",
    "bleak>=0.22.3",
    "pillow>=11.2.1",
    "cryptography>=45.0.4",
]

[project.urls]
homepage = "https://github.com/markusressel/python3-idotmatrix-library"
repository = "https://github.com/markusressel/python3-idotmatrix-library"
documentation = "https://github.com/markusressel/python3-idotmatrix-library"
"Bug Tracker" = "https://github.com/markusressel/python3-idotmatrix-library/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^8.2.0,<9"
pytest_asyncio = "^1.0.0"
pytest-mock = "*"

[tool.poetry]
packages = [
    { include = "idotmatrix" },
]
