[project]
name = "idotmatrix-api-client"
description = "A library for controlling iDotMatrix displays."
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "0.1.0"
classifiers = [
    "Intended Audience :: Developers",
]

dependencies = [
    "asyncio>=3.4.3",
    "bleak>=0.22.3",
    "pillow>=12.2.0",
    "cryptography>=46.0.7",
    "matplotlib>=3.10.3",
    "watchdog>=6.0.0"
]

[project.urls]
homepage = "https://github.com/markusressel/idotmatrix-api-client"
repository = "https://github.com/markusressel/idotmatrix-api-client"
documentation = "https://github.com/markusressel/idotmatrix-api-client"
"Bug Tracker" = "https://github.com/markusressel/idotmatrix-api-client/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^8.2.0,<9"
pytest_asyncio = "^1.0.0"
asyncmock = "*"
pytest-mock = "*"
mock = "*"

[tool.poetry]
packages = [
    { include = "idotmatrix" },
]
